# HuxBot

./: AGENTS.md  README.md  SOUL.md  pyproject.toml
huxbot/: __init__.py  __main__.py
huxbot/agent/: factory.py  instruction.py  memory.py  processor.py  skills.py
huxbot/bus/: __init__.py  events.py  queue.py
huxbot/channels/: base.py  discord.py  manager.py  telegram.py  whatsapp.py
huxbot/cli/: commands.py
huxbot/config/: __init__.py  loader.py  schema.py
huxbot/hardware/: __init__.py  board.py  connection.py
huxbot/skills/hardware_control/: SKILL.md
huxbot/skills/summarize/: SKILL.md
huxbot/tools/: __init__.py  filesystem.py  hardware.py  message.py  shell.py  web.py
huxbot/ui/: app.py
huxbot/utils/: helpers.py
workspace/memory/: MEMORY.md
